[package]
name = "orbital-charts"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lints]
workspace = true

[lib]
doctest = false

[dependencies]
leptos.workspace = true
bitflags = "2"
orbital-base-components = { path = "../orbital-base-components" }
orbital-core-components = { path = "../orbital-core-components", default-features = false }
orbital-data = { path = "../orbital-data" }
orbital-motion = { path = "../orbital-motion" }
orbital-macros = { path = "../orbital-macros" }
orbital-style = { path = "../orbital-style" }
orbital-theme = { path = "../orbital-theme", default-features = false }
orbital-datatable = { path = "../orbital-datatable", optional = true, default-features = false }
chrono.workspace = true
wasm-bindgen = { workspace = true, optional = true }
js-sys = { workspace = true, optional = true }
send_wrapper = { version = "0.6", optional = true }
web-sys = { workspace = true, optional = true, features = ["Element", "ResizeObserver", "ResizeObserverEntry", "DomRect", "Window", "CanvasRenderingContext2d", "HtmlCanvasElement"] }
icondata.workspace = true
icondata_core.workspace = true
inventory = { version = "0.3", optional = true }

[features]
default = ["preview"]
preview = ["dep:inventory", "orbital-core-components/preview", "datatable-integration"]
datatable-integration = ["dep:orbital-datatable", "orbital-datatable/preview"]
hydrate = ["leptos/hydrate", "orbital-core-components/hydrate", "orbital-theme/hydrate", "preview", "dep:inventory", "dep:wasm-bindgen", "dep:web-sys", "dep:js-sys", "dep:send_wrapper"]
ssr = ["leptos/ssr", "orbital-core-components/ssr", "orbital-theme/ssr", "preview", "dep:inventory"]
