[package]
name = "orbital-datatable"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lints]
workspace = true

[lib]
doctest = false

[dependencies]
leptos.workspace = true
bitflags = "2"
# Deflate only — default zip features pull in lzma-sys (native C), which fails on wasm32.
zip = { version = "2", default-features = false, features = ["deflate"] }
orbital-base-components = { path = "../orbital-base-components" }
orbital-core-components = { path = "../orbital-core-components", default-features = false }
orbital-data = { path = "../orbital-data" }
orbital-paging = { path = "../orbital-paging", features = ["leptos"] }
orbital-macros = { path = "../orbital-macros" }
orbital-style = { path = "../orbital-style" }
orbital-theme = { path = "../orbital-theme", default-features = false }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
chrono.workspace = true
icondata.workspace = true
icondata_core.workspace = true
inventory = { version = "0.3", optional = true }
wasm-bindgen = { workspace = true, optional = true }
wasm-bindgen-futures = { workspace = true, optional = true }
web-sys = { workspace = true, optional = true, features = ["Blob", "BlobPropertyBag", "HtmlAnchorElement", "Url", "Window", "Document", "Navigator", "Clipboard"] }
js-sys = { workspace = true, optional = true }

[features]
default = ["preview"]
preview = ["dep:inventory", "orbital-core-components/preview"]
hydrate = ["leptos/hydrate", "orbital-core-components/hydrate", "orbital-theme/hydrate", "orbital-paging/hydrate", "preview", "dep:inventory", "dep:wasm-bindgen", "dep:web-sys", "dep:js-sys", "dep:wasm-bindgen-futures"]
ssr = ["leptos/ssr", "orbital-core-components/ssr", "orbital-theme/ssr", "orbital-paging/ssr", "preview", "dep:inventory"]
