[package]
name = "orbital-date-pickers"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lints]
workspace = true

[lib]
doctest = false

[dependencies]
leptos.workspace = true
orbital-base-components = { path = "../orbital-base-components" }
orbital-core-components = { path = "../orbital-core-components", default-features = false }
orbital-macros = { path = "../orbital-macros" }
orbital-theme = { path = "../orbital-theme", default-features = false }
icondata.workspace = true
icondata_core.workspace = true
bitflags = "2"
chrono.workspace = true
turf.workspace = true
inventory = { version = "0.3", optional = true }
wasm-bindgen = { workspace = true }
web-sys = { version = "0.3", features = ["Document", "HtmlElement", "Window"] }

[features]
default = ["preview"]
preview = ["dep:inventory", "orbital-core-components/preview"]
hydrate = ["leptos/hydrate", "orbital-core-components/hydrate", "orbital-theme/hydrate", "preview", "dep:inventory"]
ssr = ["leptos/ssr", "orbital-core-components/ssr", "orbital-theme/ssr", "preview", "dep:inventory"]
