[package]
name = "orbital-macros"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lints]
workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full", "parsing", "extra-traits"] }
quote = "1.0"
proc-macro2 = { version = "1.0", features = ["span-locations"] }
darling = "0.20"

[dev-dependencies]

