[package]
name = "orbital-shell"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lints]
workspace = true

[lib]
doctest = false

[dependencies]
leptos.workspace = true
leptos_router.workspace = true
icondata.workspace = true
icondata_core.workspace = true
turf.workspace = true
pulldown-cmark = "0.13"

orbital-macros = { path = "../orbital-macros" }
orbital-primitives = { path = "../orbital-primitives", default-features = false }
orbital-core-components = { path = "../orbital-core-components" }
orbital-base-components = { path = "../orbital-base-components" }

wasm-bindgen.workspace = true
web-sys = { version = "0.3", features = ["Window", "MediaQueryList", "Event", "Storage"] }

serde = { workspace = true, features = ["derive"] }

[features]
default = []
hydrate = ["leptos/hydrate", "orbital-primitives/hydrate"]
ssr = ["leptos/ssr", "leptos_router/ssr", "orbital-primitives/ssr"]

[package.metadata.turf]
minify = true
load_paths = ["src/styles"]

[package.metadata.turf-dev]
minify = false
