[package]
name = "orbital"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Leptos component library and design system for focused, accessible product UIs"
repository = "https://github.com/unified-field-dev/orbital"
authors = ["Sean O'Rourke"]
readme = "../README.md"

[lints]
workspace = true

[lib]
doctest = false

[dependencies]
leptos.workspace = true
leptos_meta.workspace = true
leptos_router.workspace = true
leptos_axum = { workspace = true, optional = true }
axum = { workspace = true, optional = true }

icondata.workspace = true
icondata_core.workspace = true

turf.workspace = true

http.workspace = true
cfg-if.workspace = true
thiserror.workspace = true
url = { version = "2" }
urlencoding = "2.1"

serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, optional = true }

inventory = "0.3"
pulldown-cmark = "0.13"

orbital-macros = { path = "../orbital-macros" }
orbital-shell = { path = "../orbital-shell", default-features = false }
orbital-base-components = { path = "../orbital-base-components" }
orbital-primitives = { path = "../orbital-primitives", default-features = false }
orbital-core-components = { path = "../orbital-core-components", default-features = false }
orbital-theme = { path = "../orbital-theme", default-features = false }
orbital-style = { path = "../orbital-style", default-features = false }
orbital-paging = { path = "../orbital-paging", default-features = false, features = ["leptos"] }

wasm-bindgen = { workspace = true }
web-sys = { version = "0.3", features = ["Window", "MediaQueryList", "Event", "Storage"] }

[features]
default = ["preview"]
preview = ["orbital-core-components/preview", "orbital-primitives/preview"]
hydrate = [
    "leptos/hydrate",
    "orbital-base-components/hydrate",
    "orbital-primitives/hydrate",
    "orbital-theme/hydrate",
    "orbital-style/hydrate",
    "orbital-shell/hydrate",
    "orbital-paging/hydrate",
    "preview",
]
ssr = [
    "leptos/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
    "dep:leptos_axum",
    "orbital-base-components/ssr",
    "orbital-primitives/ssr",
    "orbital-theme/ssr",
    "orbital-style/ssr",
    "orbital-shell/ssr",
    "dep:tokio",
    "dep:axum",
    "orbital-paging/ssr",
    "preview",
]

[package.metadata.turf]
minify = true
load_paths = ["src/styles"]

[package.metadata.turf.class_names]
template = "<original_name>-<name_hash_short>"
excludes = ["^orbital-.*"]

[package.metadata.turf-dev]
minify = false
